# QueensAgent_pr4

./: CMakeLists.txt  INSTALL.md  README.md  agentclient.cpp  agentclient.h  agentwindow.cpp  agentwindow.h  broker.cpp  broker.h  brokerwindow.cpp  brokerwindow.h  chessboardwidget.cpp  chessboardwidget.h  knowledgebase.cpp  knowledgebase.h  knowledgebasedialog.cpp  knowledgebasedialog.h  main.cpp  mainwindow.cpp  mainwindow.h  prioritymanager.cpp  prioritymanager.h  priorityspinbox.cpp  priorityspinbox.h  queenagent.cpp  queenagent.h  queenssolver.cpp  queenssolver.h  sortdialog.cpp  sortdialog.h
